<?xml version="1.0"?>
<package format="2">
  <name>leo_mast_bringup</name>
  <version>0.0.0</version>
  <description>The leo_mast_bringup package</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
